Noop automated cleanup in `backend/*`.
- fixes typos.
- use Java 21 features where appropriate.

PiperOrigin-RevId: 755573655